# advent-of-code

./: .deepsource.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  auto-merge.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: analyse.yml  auto-merge.yml  ci.yml
2015/01/: solution_2015_01.py  test_2015_01.py
2015/02/: solution_2015_02.py  test_2015_02.py
2015/03/: solution_2015_03.py  test_2015_03.py
2015/04/: solution_2015_04.py  test_2015_04.py
2015/05/: solution_2015_05.py  test_2015_05.py
2015/06/: solution_2015_06.py  test_2015_06.py
2015/07/: solution_2015_07.py  test_2015_07.py
2015/08/: solution_2015_08.py  test_2015_08.py
2015/09/: solution_2015_09.py  test_2015_09.py
2015/10/: solution_2015_10.py  test_2015_10.py
2015/11/: solution_2015_11.py  test_2015_11.py
2015/12/: solution_2015_12.py  test_2015_12.py
2015/13/: solution_2015_13.py  test_2015_13.py
2015/14/: solution_2015_14.py  test_2015_14.py
2015/15/: solution_2015_15.py  test_2015_15.py
2015/16/: solution_2015_16.py
2015/17/: solution_2015_17.py
2015/18/: solution_2015_18.py  test_2015_18.py
2016/01/: solution_2016_01.py  test_2016_01.py
2019/01/: solution_2019_01.py  test_2019_01.py
2021/01/: solution_2021_01.py  test_2021_01.py
2021/02/: solution_2021_02.py  test_2021_02.py
2021/04/: solution_2021_04.py  test_2021_04.py
2021/06/: solution_2021_06.py  test_2021_06.py
2021/07/: solution_2021_07.py  test_2021_07.py
2021/08/: solution_2021_08.py  test_2021_08.py
aoc/: __about__.py  __init__.py  __main__.py  _version.py  api.py  arguments.py  main.py
aoc/command/: __init__.py  init.py  run.py  stars.py  test.py
aoc/lib/: algebra.py  algorithms.py  digest.py  grid.py  main.py  parse.py  profile.py  sets.py  solution.py  tree.py
aoc/misc/: arguments.py  color.py  date.py  log.py  session.py
aoc/template/: solution.py  test.py
dev/: .coveragerc  deps_update.py  github_env.py  os_version.py
tests/: __init__.py  test_about.py  test_main.py
tests/lib/: test_grid.py  test_sets.py
y2015/d01/: __init__.py  solution.py  test.py
y2015/d02/: __init__.py  solution.py
y2015/d03/: __init__.py  solution.py
y2015/d03/cases/: example..3.txt
y2015/d04/: __init__.py  solution.py
y2015/d05/: __init__.py  solution.py  test.py
y2015/d08/: __init__.py  solution.py
y2015/d10/: __init__.py  solution.py  test.py
y2016/d01/: __init__.py  solution.py
y2016/d02/: __init__.py  solution.py
y2016/d05/: __init__.py  solution.py
y2017/d01/: __init__.py  solution.py
y2017/d02/: __init__.py  solution.py
y2017/d04/: __init__.py  solution.py  test.py
y2017/d05/: __init__.py  solution.py
y2017/d06/: __init__.py  solution.py
y2017/d07/: __init__.py  solution.py
y2017/d08/: __init__.py  solution.py
y2017/d12/: __init__.py  solution.py
y2017/d13/: __init__.py  solution.py
y2017/d16/: __init__.py  solution.py  test.py
y2018/d01/: __init__.py  solution.py
y2018/d02/: __init__.py  solution.py
y2018/d08/: __init__.py  solution.py
y2018/d16/: __init__.py  solution.py
y2018/lib/: device.py
y2019/d01/: __init__.py  solution.py  test.py
y2020/d01/: __init__.py  solution.py
y2020/d02/: __init__.py  solution.py
y2020/d05/: __init__.py  solution.py  test.py
y2020/d06/: __init__.py  solution.py
y2020/d07/: __init__.py  solution.py
y2020/d10/: __init__.py  solution.py
y2020/d15/: __init__.py  solution.py
y2020/d16/: __init__.py  solution.py
y2020/d21/: __init__.py  solution.py
y2021/d01/: __init__.py  solution.py  test.py
y2021/d02/: __init__.py  solution.py
y2021/d06/: __init__.py  solution.py
y2021/d14/: __init__.py  solution.py  test.py
y2021/d16/: __init__.py  solution.py  test.py
y2021/d18/: __init__.py  solution.py  test.py
y2021/d21/: __init__.py  solution.py  test.py
y2022/d01/: __init__.py  solution.py
y2022/d02/: __init__.py  solution.py  test.py
y2022/d03/: __init__.py  solution.py
y2022/d04/: __init__.py  solution.py
y2022/d06/: __init__.py  solution.py
y2022/d07/: __init__.py  solution.py
y2022/d09/: __init__.py  solution.py
y2023/d01/: __init__.py  solution.py
y2023/d02/: __init__.py  solution.py
y2023/d04/: __init__.py  solution.py
y2023/d06/: __init__.py  solution.py
y2023/d08/: __init__.py  solution.py
y2024/d01/: __init__.py  solution.py
y2024/d07/: __init__.py  solution.py
