[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
combine_star = true
include_trailing_comma = true
use_parentheses = true
known_first_party = "aoc"
known_third_party = []

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
    "Topic :: Education",
    "Intended Audience :: Education",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
]
description = "Advent of Code Helper."
license = "GPL-3.0-or-later"
name = "aoc"
readme = "README.md"
repository = "https://github.com/NimVek/advent-of-code"
version = "21.11.0"

[tool.poetry.dependencies]
incremental = "^21.3.0"
python = "^3.9"
GitPython = "^3.1.27"
requests = "^2.28.1"
html2markdown = "^0.1.7"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pytest-randomly = "^3.12.0"
pytest-xdist = "^2.5.0"
pytest-annotate = "^1.0.5"
pytest-skip-slow = "^0.0.3"
pytest-timeout = "^2.1.0"
toml-sort = "^0.20.1"
black = "^22.8.0"
toml = "^0.10.2"
types-toml = "^0.10.8"

[tool.poetry.scripts]
aoc = 'aoc.main:main'

[tool.pytest.ini_options]
python_files = ["test_*.py"]
norecursedirs = [".*","template"]
timeout = 60
