[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.black]
line-length = 88

[tool.isort]
atomic = true
balanced_wrapping = true
combine_star = true
include_trailing_comma = true
known_first_party = "aoc"
known_logging = "logging"
known_third_party = []
line_length = 88
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "LOGGING" ]
use_parentheses = true

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
    "Topic :: Education",
    "Intended Audience :: Education",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Development Status :: 3 - Alpha",
]
description = "Advent of Code Helper."
license = "GPL-3.0-or-later"
name = "aoc"
readme = "README.md"
repository = "https://github.com/NimVek/advent-of-code"
version = "22.11.0"

[tool.poetry.dependencies]
GitPython = "^3.1.29"
beautifulsoup4 = "^4.11.1"
dateparser = "^1.1.4"
furl = "^2.1.3"
html2markdown = "^0.1.7"
incremental = "^22.10.0"
platformdirs = "^2.5.4"
python = "^3.10"
requests = "^2.28.1"
termcolor = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
ipython = "^8.6.0"
mypy = "^0.991"
pre-commit = "^3.0.2"
pytest = "^7.2.0"
pytest-annotate = "^1.0.5"
pytest-cov = "^4.0.0"
pytest-randomly = "^3.12.0"
pytest-skip-slow = "^0.0.3"
pytest-timeout = "^2.1.0"
pytest-xdist = "^3.0.2"
toml = "^0.10.2"
toml-sort = "^0.20.1"
types-toml = "^0.10.8"

[tool.poetry.scripts]
aoc = 'aoc.main:main'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
norecursedirs = [".*","template"]
python_files = ["test_*.py"]
timeout = 60
