[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.bandit]
exclude_dirs = ["2015", "2016", "2017", "2018", "2019", "2020", "2021", "2022", "dev", "tests"]

[tool.black]
line-length = 88

[tool.isort]
atomic = true
balanced_wrapping = true
combine_star = true
include_trailing_comma = true
known_first_party = "aoc"
known_logging = "logging"
known_third_party = []
line_length = 88
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "LOGGING"]
use_parentheses = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
  "Topic :: Education",
  "Intended Audience :: Education",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Natural Language :: English",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Development Status :: 3 - Alpha"
]
description = "Advent of Code Helper."
license = "GPL-3.0-or-later"
name = "aoc"
readme = "README.md"
repository = "https://github.com/NimVek/advent-of-code"
version = "22.11.0"

[tool.poetry.dependencies]
GitPython = "^3.1.42"
beautifulsoup4 = "^4.12.3"
dateparser = "^1.2.0"
furl = "^2.1.3"
html2markdown = "^0.1.7"
incremental = "^22.10.0"
parse = "^1.20.1"
platformdirs = "^4.2.0"
pydantic = "^2.6.1"
python = "^3.11"
requests = "^2.31.0"
termcolor = "^2.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ipython = "^8.21.0"
mypy = "^1.8.0"
pre-commit = "^3.6.1"
pytest = "^7.4.4"
pytest-annotate = "^1.0.5"
pytest-cov = "^4.1.0"
pytest-randomly = "^3.15.0"
pytest-skip-slow = "^0.0.5"
pytest-timeout = "^2.2.0"
pytest-xdist = "^3.5.0"
toml = "^0.10.2"
toml-sort = "^0.23.1"
types-toml = "^0.10.8.7"

[tool.poetry.group.extras]
optional = true

[tool.poetry.group.extras.dependencies]
browser-cookie3 = "^0.19.1"

[tool.poetry.scripts]
aoc = 'aoc.main:main'

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
norecursedirs = [".*", "template"]
python_files = ["test_*.py"]
timeout = 60

[tool.ruff]
extend-exclude = ["2015", "2016", "2017", "2018", "2019", "2020", "2021", "2022"]

[tool.tomlsort]
overrides."tool.*".inline_arrays = false
